# manus_3subagent_repro

./: .env.example  .gitignore  README.md  pyproject.toml
configs/: base.yaml  model_overrides.example.yaml  models.yaml  prompt_context.example.yaml  prompt_overrides.example.yaml  tracing.yaml
configs/prompts/: architect.yaml  critic.yaml  worker.yaml
data/testing/: trajectory_testing_data_v1.jsonl
docs/: READING_GUIDE.md  README.md
docs/architecture/: AGENT_FRAMEWORK_ARCHITECTURE.md  CODEACT_REACT_HYBRID_DESIGN.md  CODEBASE_READING_ROADMAP.md  MANUS_AGENT_DESIGN_PRINCIPLES.md  MANUS_AGENT_ORCHESTRATION_DEEP_DIVE.md  MANUS_PLANNER_PSEUDOCODE.md
docs/plans/: CODE_STRUCTURE_PLAN.md  JUPYTER_NOTEBOOK_EDUCATION_PLAN.md  MANUS_DOCUMENT_COLLECTION_AND_GAP_PLAN.md  REPRODUCTION_PLAN.md  TRAINING_DATA_TRACING_PLAN.md  TRAJECTORY_TRACING_TUNING_PLAN.md
notebooks/education/: 01_inspect_planner_worker_verifier_io.ipynb  02_orchestration_loop_live.ipynb  03_tool_use_search_summary_agentic_task.ipynb  README.md
references/: README.md  REFERENCE_SOURCES.csv
references/raw/: langgraph_docs.html  langgraph_github.html  manus_blog.html  manus_docs.html  manus_feature_browser_operator.html  manus_feature_webapp.html  manus_feature_wide_research.html  manus_home.html  manus_open_docs.html  (+7 more)
scripts/: download_references.sh  execute_notebook_cells.py  run_education_notebooks.sh  run_episode_with_trace.sh  setup_env.sh
tests/: test_config_flexibility.py  test_llm_provider_resolution.py  test_mock_workflow.py  test_tracing_infra.py  test_training_export.py
(+36 files in other folders)
